# cursor-playground

./: .gitignore  .yarnrc.yml  README.md  SUMMARY.md  Taskfile.yml  cursor-playground.code-workspace  debug-ui-issues.md  package-lock.json  package.json  todo.md
.cursor/commands/: add-new-feature.md  commit-changes.md  debug-api-schema-mismatch.md  debug-ui-issues.md  fix-lint-errors.md
.cursor/rules/: 000-core-rule.mdc  taskfiles.mdc  terminal.mdc  todo.mdc  version-control.mdc  versionControl.mdc
.history/: .gitignore_20250722091454  README_20250722091508.md  todo_20250722130850.md  todo_20250722131934.md  todo_20250722132534.md
.history/app/: index_20250722092923.html  package_20250722092755.json  package_20250722093146.json  package_20250722095117.json  package_20250722100433.json  playwright.config_20250722100359.js  playwright.config_20250722123623.js  playwright.config_20250722132626.js  playwright.config_20250722132627.js  playwright.config_20250722132630.js  playwright.config_20250722132717.js  playwright.config_20250722132719.js  playwright.config_20250722132726.js  playwright.config_20250722132728.js  playwright.config_20250722132738.js  playwright.config_20250722132741.js  playwright.config_20250722132749.js  playwright.config_20250722132753.js  vite.config_20250722092912.ts  vite.config_20250722124608.ts
.history/app/src/: App_20250722093004.tsx  App_20250722115414.tsx  index_20250722092948.css  main_20250722092937.tsx  main_20250722093703.tsx  main_20250722095715.tsx
.history/app/src/pages/: Home_20250722093933.tsx  NotFound_20250722094000.tsx  TaskDetail_20250722095749.tsx  Tasks_20250722094207.tsx  UserDetail_20250722094257.tsx  Users_20250722094133.tsx
.history/app/src/types/: index_20250722093016.ts
.history/app/tests/: README_20250722132100.md  search.test_20250722100414.js  user-management.test_20250722115536.js  user-management.test_20250722123608.js  user-management.test_20250722123655.js  user-management.test_20250722124702.js  user-management.test_20250722131044.js  user-management.test_20250722131720.js  user-management.test_20250722131841.js
.history/services/common/: setup_20250722092337.py
.history/services/web-api/: README_20250722092626.md  requirements_20250722092452.txt
.history/services/web-api/app/: main_20250722092514.py
.history/services/worker/: README_20250722092739.md  requirements_20250722092636.txt
.history/services/worker/worker/: __init___20250722092644.py  main_20250722092707.py  tasks_20250722092724.py
app/: .eslintrc.cjs  .gitignore  .prettierignore  .yarnrc.yml  README.md  Taskfile.yml  components.json  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
app/playwright-report/: index.html
app/src/: App.tsx  globals.css  main.tsx
app/src/__tests__/: README.md  setup.ts
app/src/__tests__/components/: Button.test.tsx  Card.test.tsx
app/src/api/: index.ts
app/src/components/: Layout.tsx
app/src/components/ui/: alert-dialog.tsx  badge-variants.ts  badge.tsx  button-variants.ts  button.tsx  card.tsx  input.tsx  select.tsx  toast.tsx
app/src/hooks/: use-toast.ts
app/src/pages/: Home.tsx  NotFound.tsx  TaskCreate.tsx  TaskDetail.tsx  Tasks.tsx  UserCreate.tsx  UserDetail.tsx  Users.tsx
app/src/types/: index.ts
app/tests/: README.md  navigation.test.js  task-management.test.js
app/tests/integration/: navigation.test.js  search.test.js  task-management.test.js  user-management.test.js
app/tests/integration/api/: api.spec.ts
app/tests/unit/: README.md  setup.ts
app/tests/unit/app/: AppRoutes.test.tsx
app/tests/unit/components/: Button.test.tsx  Card.test.tsx  Input.test.tsx  Label.test.tsx
app/tests/unit/pages/: Home.test.tsx
devops/: python-tooling-integration.md
devops/helm/: readme.md
e2e/: plan.md
scripts/: README.md  safe-start.sh  validate_worker.py
services/api/: README.md  Taskfile.yml  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_enhance_tasks.py  003_remove_is_completed.py
services/api/scripts/: run-examples.sh
services/api/src/: __init__.py  main.py
services/api/src/routers/: tasks.py  users.py
services/api/tests/: __init__.py  conftest.py  test_tasks_api.py  test_users_api.py
services/web-api/: README.md  Taskfile.yml  __init__.py  alembic.ini  pyproject.toml  requirements_dev.txt
services/web-api/alembic/: env.py
services/web-api/app/: __init__.py
services/web-api/app/routers/: users.py
services/web-api/src/: main.py
services/web-api/src/routers/: __init__.py  tasks.py
services/web-api/tests/: __init__.py  conftest.py  test_users_api.py
services/worker/: README.md  Taskfile.yml  __init__.py  pyproject.toml  test_worker.py
services/worker/src/: __init__.py  main.py
services/worker/tests/: __init__.py  conftest.py  test_main.py  test_simple.py  test_tasks.py
services/worker/worker/: main.py  tasks.py
