[project]
name = "web-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "common",
    "fastapi>=0.109.0",
    "pydantic[email]>=2.9.0",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=1.3.0,<1.4.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
    "pytest>=7.4.0",
    "httpx>=0.24.1",
]

[tool.uv.sources]
common = { path = "../../packages/common", editable = true }

[[tool.uv.index]]
name = "CODEARTIFACT"
url = "https://pagaya-artifacts-704102000649.d.codeartifact.us-east-1.amazonaws.com/pypi/Pagaya-Artifacts-prod/simple/"
default = true