[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "celery>=5.3.0",
    "common",
    "pydantic[email]>=2.9.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=1.3.0,<1.4.0",
]


[tool.uv.sources]
common = { path = "../../packages/common", editable = true }

[[tool.uv.index]]
name = "CODEARTIFACT"
url = "https://pagaya-artifacts-704102000649.d.codeartifact.us-east-1.amazonaws.com/pypi/Pagaya-Artifacts-prod/simple/"
default = true

